--- a/block-BNaabs/new.html
+++ b/block-BNaabs/new.html
@@ -6,9 +6,9 @@
     <title>Express Form</title>
   </head>
   <body>
-    <form action="">
-      <input type="text" name="name" id="name" />
-      <input type="text" name="userName" id="userName" />
+    <form action="/new" method="post">
+      <input type="text" name="name" id="name" placeholder="Name" />
+      <input type="text" name="userName" id="userName" placeholder="Username" />
       <input type="submit" value="Submit" />
     </form>
   </body>
